--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,7 @@
         android:layout_below="@+id/destination_long"
         android:layout_marginTop="64dp"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:weightSum="2">
 
         <LinearLayout
@@ -114,8 +115,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
-                android:gravity="center_vertical"
-                android:text="32.5km" />
+                android:gravity="center_vertical" />
 
         </LinearLayout>
 
@@ -139,8 +139,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
-                android:gravity="center_vertical"
-                android:text="01:45" />
+                android:gravity="center_vertical" />
 
         </LinearLayout>
 
