--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,155 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.siblea.distancecalculator.MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/user_location_title"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="YOUR LOCATION"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.siblea.distancecalculator.MainActivity">
 
-    <TextView
-        android:id="@+id/user_long_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/user_location_title"
-        android:layout_marginTop="16dp"
-        android:text="LONG: "
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/user_location_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="YOUR LOCATION"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/user_long"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/user_location_title"
-        android:layout_marginTop="16dp"
-        android:layout_toEndOf="@+id/user_long_label"
-        android:layout_toRightOf="@+id/user_long_label"
-        android:textSize="16sp" />
+        <TextView
+            android:id="@+id/user_long_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/user_location_title"
+            android:layout_marginTop="16dp"
+            android:text="LONG: "
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/user_lat_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/user_location_title"
-        android:layout_marginTop="16dp"
-        android:layout_toLeftOf="@+id/user_lat"
-        android:layout_toStartOf="@+id/user_lat"
-        android:text="LAT: "
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/user_long"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/user_location_title"
+            android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/user_long_label"
+            android:layout_toRightOf="@+id/user_long_label"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/user_lat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/user_location_title"
-        android:layout_marginTop="16dp"
-        android:textSize="16sp" />
+        <TextView
+            android:id="@+id/user_lat_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/user_location_title"
+            android:layout_marginTop="16dp"
+            android:layout_toLeftOf="@+id/user_lat"
+            android:layout_toStartOf="@+id/user_lat"
+            android:text="LAT: "
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/user_destination_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/user_lat_label"
-        android:layout_marginTop="64dp"
-        android:gravity="center"
-        android:text="YOUR DESTIONATION"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/user_lat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/user_location_title"
+            android:layout_marginTop="16dp"
+            android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/destination_lat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/user_destination_title"
-        android:hint="Type Latitude" />
+        <TextView
+            android:id="@+id/user_destination_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/user_lat_label"
+            android:layout_marginTop="64dp"
+            android:gravity="center"
+            android:text="YOUR DESTIONATION"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/destination_long"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/destination_lat"
-        android:hint="Type Longitude" />
+        <EditText
+            android:id="@+id/destination_lat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/user_destination_title"
+            android:hint="Type Latitude"
+            android:inputType="numberSigned|numberDecimal"
+            android:maxLines="1" />
 
-    <LinearLayout
-        android:id="@+id/calculations_containter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/destination_long"
-        android:layout_marginTop="64dp"
-        android:orientation="horizontal"
-        android:visibility="gone"
-        android:weightSum="2">
+        <EditText
+            android:id="@+id/destination_long"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/destination_lat"
+            android:hint="Type Longitude"
+            android:inputType="numberSigned|numberDecimal"
+            android:maxLines="1" />
 
         <LinearLayout
-            android:id="@+id/disrance_meters_container"
-            android:layout_width="0dp"
+            android:id="@+id/calculations_containter"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_below="@+id/destination_long"
+            android:layout_marginTop="64dp"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            android:weightSum="2">
 
-            <ImageView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/disrance_meters_container"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_directions_car_black_24dp" />
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/distance"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:gravity="center_vertical" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_directions_car_black_24dp" />
+
+                <TextView
+                    android:id="@+id/distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center_vertical" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/disrance_time_container"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_access_time_black_24dp" />
+
+                <TextView
+                    android:id="@+id/duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center_vertical" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
-        <LinearLayout
-            android:id="@+id/disrance_time_container"
-            android:layout_width="0dp"
+        <Button
+            android:id="@+id/calculate"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_alignParentBottom="true"
+            android:text="Calculate distance" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_access_time_black_24dp" />
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/duration"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:gravity="center_vertical" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/calculate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="Calculate distance" />
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
